// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`custom class name 1`] = `
"*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.markdown {
  color: var(--tw-prose-body);
  max-width: 65ch;
  [class~="lead"] {
    color: var(--tw-prose-lead);
  }
  .strong {
    color: var(--tw-prose-bold);
    font-weight: 600;
  }
  .ol[type="A"] {
    list-style-type: upper-alpha;
  }
  .blockquote .p:first-of-type::before {
    content: open-quote;
  }
  .blockquote .p:last-of-type::after {
    content: close-quote;
  }
  .h4 .strong {
    font-weight: 700;
  }
  .figure > * {
    margin: 0;
  }
  .ol > .li::marker {
    font-weight: 400;
    color: var(--tw-prose-counters);
  }
  .code::before {
    content: "&#96;";
  }
  .code::after {
    content: "&#96;";
  }
}"
`;

exports[`customizing defaults with multiple values does not result in invalid css 1`] = `
"*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.prose {
  text-align: -webkit-match-parent;
  text-align: match-parent;
}"
`;

exports[`does not modify selectors with differing pseudo elements 1`] = `
"*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.prose {
  .ol .li::before, .ul .li::after {
    color: red;
  }
}
.dark\\:prose {
  &:is(.dark *) {
    .ol .li::before, .ul .li::after {
      color: red;
    }
  }
}"
`;

exports[`element variants 1`] = `
"@layer properties;
:root, :host {
  --font-mono: ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
  --color-red-200: oklch(88.5% .062 18.334);
  --color-red-300: oklch(80.8% .114 19.571);
  --color-gray-700: oklch(37.3% .034 259.733);
  --spacing: .25rem;
  --text-lg: 1.125rem;
  --text-lg--line-height: calc(1.75/1.125);
  --text-xl: 1.25rem;
  --text-xl--line-height: calc(1.75/1.25);
  --text-2xl: 1.5rem;
  --text-2xl--line-height: calc(2/1.5);
  --text-3xl: 1.875rem;
  --text-3xl--line-height: calc(2.25/1.875);
  --font-weight-medium: 500;
  --font-weight-bold: 700;
  --radius-lg: .5rem;
}
*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.prose {
  color: var(--tw-prose-body);
  [class~="lead"] {
    color: var(--tw-prose-lead);
  }
  .strong {
    color: var(--tw-prose-bold);
    font-weight: 600;
  }
  .h4 .strong {
    font-weight: 700;
  }
}
.prose-headings\\:underline {
  & .h1 {
    text-decoration-line: underline;
  }
  & .h2 {
    text-decoration-line: underline;
  }
  & .h3 {
    text-decoration-line: underline;
  }
  & .h4 {
    text-decoration-line: underline;
  }
  & .h5 {
    text-decoration-line: underline;
  }
  & .h6 {
    text-decoration-line: underline;
  }
  & .th {
    text-decoration-line: underline;
  }
}
.prose-h1\\:text-3xl {
  & .h1 {
    font-size: var(--text-3xl);
    line-height: var(--tw-leading, var(--text-3xl--line-height));
  }
}
.prose-h2\\:text-2xl {
  & .h2 {
    font-size: var(--text-2xl);
    line-height: var(--tw-leading, var(--text-2xl--line-height));
  }
}
.prose-h3\\:text-xl {
  & .h3 {
    font-size: var(--text-xl);
    line-height: var(--tw-leading, var(--text-xl--line-height));
  }
}
.prose-h4\\:text-lg {
  & .h4 {
    font-size: var(--text-lg);
    line-height: var(--tw-leading, var(--text-lg--line-height));
  }
}
.prose-p\\:text-gray-700 {
  & .p {
    color: var(--color-gray-700);
  }
}
.prose-a\\:font-bold {
  & .a {
    --tw-font-weight: var(--font-weight-bold);
    font-weight: var(--font-weight-bold);
  }
}
.prose-blockquote\\:italic {
  & .blockquote {
    font-style: italic;
  }
}
.prose-figure\\:mx-auto {
  & .figure {
    margin-inline: auto;
  }
}
.prose-figcaption\\:opacity-75 {
  & .figcaption {
    opacity: 75%;
  }
}
.prose-strong\\:font-medium {
  & .strong {
    --tw-font-weight: var(--font-weight-medium);
    font-weight: var(--font-weight-medium);
  }
}
.prose-em\\:italic {
  & .em {
    font-style: italic;
  }
}
.prose-code\\:font-mono {
  & .code {
    font-family: var(--font-mono);
  }
}
.prose-pre\\:font-mono {
  & .pre {
    font-family: var(--font-mono);
  }
}
.prose-ol\\:pl-6 {
  & .ol {
    padding-left: calc(var(--spacing) * 6);
  }
}
.prose-ul\\:pl-8 {
  & .ul {
    padding-left: calc(var(--spacing) * 8);
  }
}
.prose-li\\:my-4 {
  & .li {
    margin-block: calc(var(--spacing) * 4);
  }
}
.prose-table\\:my-8 {
  & .table {
    margin-block: calc(var(--spacing) * 8);
  }
}
.prose-thead\\:border-red-300 {
  & .thead {
    border-color: var(--color-red-300);
  }
}
.prose-tr\\:border-red-200 {
  & .tr {
    border-color: var(--color-red-200);
  }
}
.prose-th\\:text-left {
  & .th {
    text-align: left;
  }
}
.prose-img\\:rounded-lg {
  & .img {
    border-radius: var(--radius-lg);
  }
}
.prose-video\\:my-12 {
  & .video {
    margin-block: calc(var(--spacing) * 12);
  }
}
.prose-hr\\:border-t-2 {
  & .hr {
    border-top-style: var(--tw-border-style);
    border-top-width: 2px;
  }
}
.prose-lead\\:italic {
  & [class~="lead"] {
    font-style: italic;
  }
}
@property --tw-font-weight {
  syntax: "*";
  inherits: false;
}
@property --tw-border-style {
  syntax: "*";
  inherits: false;
  initial-value: solid;
}
@layer properties {
  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
    *, ::before, ::after, ::backdrop {
      --tw-font-weight: initial;
      --tw-border-style: solid;
    }
  }
}"
`;

exports[`element variants with custom class name 1`] = `
"@layer properties;
:root, :host {
  --font-mono: ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
  --color-red-200: oklch(88.5% .062 18.334);
  --color-red-300: oklch(80.8% .114 19.571);
  --color-gray-700: oklch(37.3% .034 259.733);
  --spacing: .25rem;
  --text-lg: 1.125rem;
  --text-lg--line-height: calc(1.75/1.125);
  --text-xl: 1.25rem;
  --text-xl--line-height: calc(1.75/1.25);
  --text-2xl: 1.5rem;
  --text-2xl--line-height: calc(2/1.5);
  --text-3xl: 1.875rem;
  --text-3xl--line-height: calc(2.25/1.875);
  --font-weight-medium: 500;
  --font-weight-bold: 700;
  --radius-lg: .5rem;
}
*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.markdown {
  color: var(--tw-prose-body);
  [class~="lead"] {
    color: var(--tw-prose-lead);
  }
  .strong {
    color: var(--tw-prose-bold);
    font-weight: 600;
  }
  .h4 .strong {
    font-weight: 700;
  }
}
.markdown-headings\\:underline {
  & .h1 {
    text-decoration-line: underline;
  }
  & .h2 {
    text-decoration-line: underline;
  }
  & .h3 {
    text-decoration-line: underline;
  }
  & .h4 {
    text-decoration-line: underline;
  }
  & .h5 {
    text-decoration-line: underline;
  }
  & .h6 {
    text-decoration-line: underline;
  }
  & .th {
    text-decoration-line: underline;
  }
}
.markdown-h1\\:text-3xl {
  & .h1 {
    font-size: var(--text-3xl);
    line-height: var(--tw-leading, var(--text-3xl--line-height));
  }
}
.markdown-h2\\:text-2xl {
  & .h2 {
    font-size: var(--text-2xl);
    line-height: var(--tw-leading, var(--text-2xl--line-height));
  }
}
.markdown-h3\\:text-xl {
  & .h3 {
    font-size: var(--text-xl);
    line-height: var(--tw-leading, var(--text-xl--line-height));
  }
}
.markdown-h4\\:text-lg {
  & .h4 {
    font-size: var(--text-lg);
    line-height: var(--tw-leading, var(--text-lg--line-height));
  }
}
.markdown-p\\:text-gray-700 {
  & .p {
    color: var(--color-gray-700);
  }
}
.markdown-a\\:font-bold {
  & .a {
    --tw-font-weight: var(--font-weight-bold);
    font-weight: var(--font-weight-bold);
  }
}
.markdown-blockquote\\:italic {
  & .blockquote {
    font-style: italic;
  }
}
.markdown-figure\\:mx-auto {
  & .figure {
    margin-inline: auto;
  }
}
.markdown-figcaption\\:opacity-75 {
  & .figcaption {
    opacity: 75%;
  }
}
.markdown-strong\\:font-medium {
  & .strong {
    --tw-font-weight: var(--font-weight-medium);
    font-weight: var(--font-weight-medium);
  }
}
.markdown-em\\:italic {
  & .em {
    font-style: italic;
  }
}
.markdown-code\\:font-mono {
  & .code {
    font-family: var(--font-mono);
  }
}
.markdown-pre\\:font-mono {
  & .pre {
    font-family: var(--font-mono);
  }
}
.markdown-ol\\:pl-6 {
  & .ol {
    padding-left: calc(var(--spacing) * 6);
  }
}
.markdown-ul\\:pl-8 {
  & .ul {
    padding-left: calc(var(--spacing) * 8);
  }
}
.markdown-li\\:my-4 {
  & .li {
    margin-block: calc(var(--spacing) * 4);
  }
}
.markdown-table\\:my-8 {
  & .table {
    margin-block: calc(var(--spacing) * 8);
  }
}
.markdown-thead\\:border-red-300 {
  & .thead {
    border-color: var(--color-red-300);
  }
}
.markdown-tr\\:border-red-200 {
  & .tr {
    border-color: var(--color-red-200);
  }
}
.markdown-th\\:text-left {
  & .th {
    text-align: left;
  }
}
.markdown-img\\:rounded-lg {
  & .img {
    border-radius: var(--radius-lg);
  }
}
.markdown-video\\:my-12 {
  & .video {
    margin-block: calc(var(--spacing) * 12);
  }
}
.markdown-hr\\:border-t-2 {
  & .hr {
    border-top-style: var(--tw-border-style);
    border-top-width: 2px;
  }
}
.markdown-lead\\:italic {
  & [class~="lead"] {
    font-style: italic;
  }
}
@property --tw-font-weight {
  syntax: "*";
  inherits: false;
}
@property --tw-border-style {
  syntax: "*";
  inherits: false;
  initial-value: solid;
}
@layer properties {
  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
    *, ::before, ::after, ::backdrop {
      --tw-font-weight: initial;
      --tw-border-style: solid;
    }
  }
}"
`;

exports[`ignores common non-trailing pseudo-elements in selectors 1`] = `
"*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.prose {
  .ol .li::before::scroll-thumb, .ul .li::before::scroll-track {
    color: red;
  }
}
.dark\\:prose {
  &:is(.dark *) {
    .ol .li::before::scroll-thumb, .ul .li::before::scroll-track {
      color: red;
    }
  }
}"
`;

exports[`lead styles are inserted after paragraph styles 1`] = `
"*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.prose {
  color: var(--tw-prose-body);
  max-width: 65ch;
  .p {
    margin-top: 1.25em;
    margin-bottom: 1.25em;
  }
  [class~="lead"] {
    color: var(--tw-prose-lead);
    font-size: 1.25em;
    line-height: 1.6;
    margin-top: 1.2em;
    margin-bottom: 1.2em;
  }
  .a {
    color: var(--tw-prose-links);
    text-decoration: underline;
    font-weight: 500;
  }
  .strong {
    color: var(--tw-prose-bold);
    font-weight: 600;
  }
  .a .strong {
    color: inherit;
  }
  .blockquote .strong {
    color: inherit;
  }
  .thead .th .strong {
    color: inherit;
  }
  .ol {
    list-style-type: decimal;
    margin-top: 1.25em;
    margin-bottom: 1.25em;
    padding-left: 1.625em;
  }
  .ol[type="A"] {
    list-style-type: upper-alpha;
  }
  .ol[type="a"] {
    list-style-type: lower-alpha;
  }
  .ol[type="I"] {
    list-style-type: upper-roman;
  }
  .ol[type="i"] {
    list-style-type: lower-roman;
  }
  .ol[type="1"] {
    list-style-type: decimal;
  }
  .ul {
    list-style-type: disc;
    margin-top: 1.25em;
    margin-bottom: 1.25em;
    padding-left: 1.625em;
  }
  .ol > .li::marker {
    font-weight: 400;
    color: var(--tw-prose-counters);
  }
  .ul > .li::marker {
    color: var(--tw-prose-bullets);
  }
  .dt {
    color: var(--tw-prose-headings);
    font-weight: 600;
    margin-top: 1.25em;
  }
  .hr {
    border-color: var(--tw-prose-hr);
    border-top-width: 1;
    margin-top: 3em;
    margin-bottom: 3em;
  }
  .blockquote {
    font-weight: 500;
    font-style: italic;
    color: var(--tw-prose-quotes);
    border-left-width: 0.25rem;
    border-left-color: var(--tw-prose-quote-borders);
    quotes: "\\201C""\\201D""\\2018""\\2019";
    margin-top: 1.6em;
    margin-bottom: 1.6em;
    padding-left: 1em;
  }
  .blockquote .p:first-of-type::before {
    content: open-quote;
  }
  .blockquote .p:last-of-type::after {
    content: close-quote;
  }
  .h1 {
    color: var(--tw-prose-headings);
    font-weight: 800;
    font-size: 2.25em;
    margin-top: 0;
    margin-bottom: 0.8888889em;
    line-height: 1.1111111;
  }
  .h1 .strong {
    font-weight: 900;
    color: inherit;
  }
  .h2 {
    color: var(--tw-prose-headings);
    font-weight: 700;
    font-size: 1.5em;
    margin-top: 2em;
    margin-bottom: 1em;
    line-height: 1.3333333;
  }
  .h2 .strong {
    font-weight: 800;
    color: inherit;
  }
  .h3 {
    color: var(--tw-prose-headings);
    font-weight: 600;
    font-size: 1.25em;
    margin-top: 1.6em;
    margin-bottom: 0.6em;
    line-height: 1.6;
  }
  .h3 .strong {
    font-weight: 700;
    color: inherit;
  }
  .h4 {
    color: var(--tw-prose-headings);
    font-weight: 600;
    margin-top: 1.5em;
    margin-bottom: 0.5em;
    line-height: 1.5;
  }
  .h4 .strong {
    font-weight: 700;
    color: inherit;
  }
  .img {
    margin-top: 2em;
    margin-bottom: 2em;
  }
  .picture {
    display: block;
    margin-top: 2em;
    margin-bottom: 2em;
  }
  .kbd {
    font-weight: 500;
    font-family: inherit;
    color: var(--tw-prose-kbd);
    box-shadow: 0 0 0 1px rgb(var(--tw-prose-kbd-shadows) / 10%), 0 3px 0 rgb(var(--tw-prose-kbd-shadows) / 10%);
    font-size: 0.875em;
    border-radius: 0.3125rem;
    padding-top: 0.1875em;
    padding-right: 0.375em;
    padding-bottom: 0.1875em;
    padding-left: 0.375em;
  }
  .code {
    color: var(--tw-prose-code);
    font-weight: 600;
    font-size: 0.875em;
  }
  .code::before {
    content: "\`";
  }
  .code::after {
    content: "\`";
  }
  .a .code {
    color: inherit;
  }
  .h1 .code {
    color: inherit;
  }
  .h2 .code {
    color: inherit;
    font-size: 0.875em;
  }
  .h3 .code {
    color: inherit;
    font-size: 0.9em;
  }
  .h4 .code {
    color: inherit;
  }
  .blockquote .code {
    color: inherit;
  }
  .thead .th .code {
    color: inherit;
  }
  .pre {
    color: var(--tw-prose-pre-code);
    background-color: var(--tw-prose-pre-bg);
    overflow-x: auto;
    font-weight: 400;
    font-size: 0.875em;
    line-height: 1.7142857;
    margin-top: 1.7142857em;
    margin-bottom: 1.7142857em;
    border-radius: 0.375rem;
    padding-top: 0.8571429em;
    padding-right: 1.1428571em;
    padding-bottom: 0.8571429em;
    padding-left: 1.1428571em;
  }
  .pre .code {
    background-color: transparent;
    border-width: 0;
    border-radius: 0;
    padding: 0;
    font-weight: inherit;
    color: inherit;
    font-size: inherit;
    font-family: inherit;
    line-height: inherit;
  }
  .pre .code::before {
    content: none;
  }
  .pre .code::after {
    content: none;
  }
  .table {
    width: 100%;
    table-layout: auto;
    text-align: left;
    margin-top: 2em;
    margin-bottom: 2em;
    font-size: 0.875em;
    line-height: 1.7142857;
  }
  .thead {
    border-bottom-width: 1px;
    border-bottom-color: var(--tw-prose-th-borders);
  }
  .thead .th {
    color: var(--tw-prose-headings);
    font-weight: 600;
    vertical-align: bottom;
    padding-right: 0.5714286em;
    padding-bottom: 0.5714286em;
    padding-left: 0.5714286em;
  }
  .tbody .tr {
    border-bottom-width: 1px;
    border-bottom-color: var(--tw-prose-td-borders);
  }
  .tbody .tr:last-child {
    border-bottom-width: 0;
  }
  .tbody .td {
    vertical-align: baseline;
  }
  .tfoot {
    border-top-width: 1px;
    border-top-color: var(--tw-prose-th-borders);
  }
  .tfoot .td {
    vertical-align: top;
  }
  .figure > * {
    margin-top: 0;
    margin-bottom: 0;
  }
  .figcaption {
    color: var(--tw-prose-captions);
    font-size: 0.875em;
    line-height: 1.4285714;
    margin-top: 0.8571429em;
  }
  --tw-prose-body: oklch(37.3% 0.034 259.733);
  --tw-prose-headings: oklch(21% 0.034 264.665);
  --tw-prose-lead: oklch(44.6% 0.03 256.802);
  --tw-prose-links: oklch(21% 0.034 264.665);
  --tw-prose-bold: oklch(21% 0.034 264.665);
  --tw-prose-counters: oklch(55.1% 0.027 264.364);
  --tw-prose-bullets: oklch(87.2% 0.01 258.338);
  --tw-prose-hr: oklch(92.8% 0.006 264.531);
  --tw-prose-quotes: oklch(21% 0.034 264.665);
  --tw-prose-quote-borders: oklch(92.8% 0.006 264.531);
  --tw-prose-captions: oklch(55.1% 0.027 264.364);
  --tw-prose-kbd: oklch(21% 0.034 264.665);
  --tw-prose-kbd-shadows: NaN NaN NaN;
  --tw-prose-code: oklch(21% 0.034 264.665);
  --tw-prose-pre-code: oklch(92.8% 0.006 264.531);
  --tw-prose-pre-bg: oklch(27.8% 0.033 256.848);
  --tw-prose-th-borders: oklch(87.2% 0.01 258.338);
  --tw-prose-td-borders: oklch(92.8% 0.006 264.531);
  --tw-prose-invert-body: oklch(87.2% 0.01 258.338);
  --tw-prose-invert-headings: #fff;
  --tw-prose-invert-lead: oklch(70.7% 0.022 261.325);
  --tw-prose-invert-links: #fff;
  --tw-prose-invert-bold: #fff;
  --tw-prose-invert-counters: oklch(70.7% 0.022 261.325);
  --tw-prose-invert-bullets: oklch(44.6% 0.03 256.802);
  --tw-prose-invert-hr: oklch(37.3% 0.034 259.733);
  --tw-prose-invert-quotes: oklch(96.7% 0.003 264.542);
  --tw-prose-invert-quote-borders: oklch(37.3% 0.034 259.733);
  --tw-prose-invert-captions: oklch(70.7% 0.022 261.325);
  --tw-prose-invert-kbd: #fff;
  --tw-prose-invert-kbd-shadows: 255 255 255;
  --tw-prose-invert-code: #fff;
  --tw-prose-invert-pre-code: oklch(87.2% 0.01 258.338);
  --tw-prose-invert-pre-bg: rgb(0 0 0 / 50%);
  --tw-prose-invert-th-borders: oklch(44.6% 0.03 256.802);
  --tw-prose-invert-td-borders: oklch(37.3% 0.034 259.733);
  font-size: 1rem;
  line-height: 1.75;
  .picture > .img {
    margin-top: 0;
    margin-bottom: 0;
  }
  .video {
    margin-top: 2em;
    margin-bottom: 2em;
  }
  .li {
    margin-top: 0.5em;
    margin-bottom: 0.5em;
  }
  .ol > .li {
    padding-left: 0.375em;
  }
  .ul > .li {
    padding-left: 0.375em;
  }
   > .ul > .li .p {
    margin-top: 0.75em;
    margin-bottom: 0.75em;
  }
   > .ul > .li > *:first-child {
    margin-top: 1.25em;
  }
   > .ul > .li > *:last-child {
    margin-bottom: 1.25em;
  }
   > .ol > .li > *:first-child {
    margin-top: 1.25em;
  }
   > .ol > .li > *:last-child {
    margin-bottom: 1.25em;
  }
  .ul .ul, .ul .ol, .ol .ul, .ol .ol {
    margin-top: 0.75em;
    margin-bottom: 0.75em;
  }
  .dl {
    margin-top: 1.25em;
    margin-bottom: 1.25em;
  }
  .dd {
    margin-top: 0.5em;
    padding-left: 1.625em;
  }
  .hr + * {
    margin-top: 0;
  }
  .h2 + * {
    margin-top: 0;
  }
  .h3 + * {
    margin-top: 0;
  }
  .h4 + * {
    margin-top: 0;
  }
  .thead .th:first-child {
    padding-left: 0;
  }
  .thead .th:last-child {
    padding-right: 0;
  }
  .tbody .td, .tfoot .td {
    padding-top: 0.5714286em;
    padding-right: 0.5714286em;
    padding-bottom: 0.5714286em;
    padding-left: 0.5714286em;
  }
  .tbody .td:first-child, .tfoot .td:first-child {
    padding-left: 0;
  }
  .tbody .td:last-child, .tfoot .td:last-child {
    padding-right: 0;
  }
  .figure {
    margin-top: 2em;
    margin-bottom: 2em;
  }
}"
`;

exports[`legacy target 1`] = `
"*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.prose {
  color: var(--tw-prose-body);
  max-width: 65ch;
  [class~="lead"] {
    color: var(--tw-prose-lead);
  }
  .strong {
    color: var(--tw-prose-bold);
    font-weight: 600;
  }
  .ol[type="A"] {
    list-style-type: upper-alpha;
  }
  .blockquote .p:first-of-type::before {
    content: open-quote;
  }
  .blockquote .p:last-of-type::after {
    content: close-quote;
  }
  .h4 .strong {
    font-weight: 700;
  }
  .figure > * {
    margin: 0;
  }
  .ol > .li::marker {
    font-weight: 400;
    color: var(--tw-prose-counters);
  }
  .code::before {
    content: "&#96;";
  }
  .code::after {
    content: "&#96;";
  }
}
.prose-headings\\:text-ellipsis {
  & .h1 {
    text-overflow: ellipsis;
  }
  & .h2 {
    text-overflow: ellipsis;
  }
  & .h3 {
    text-overflow: ellipsis;
  }
  & .h4 {
    text-overflow: ellipsis;
  }
  & .h5 {
    text-overflow: ellipsis;
  }
  & .h6 {
    text-overflow: ellipsis;
  }
  & .th {
    text-overflow: ellipsis;
  }
}
.prose-h1\\:text-center {
  & .h1 {
    text-align: center;
  }
}"
`;

exports[`lifts all common, trailing pseudo elements when the same across all selectors 1`] = `
"*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.prose {
  .ol .li::marker::before, .ul .li::marker::before {
    color: red;
  }
}
.dark\\:prose {
  &:is(.dark *) {
    .ol .li::marker::before, .ul .li::marker::before {
      color: red;
    }
  }
}"
`;

exports[`lifts only the common, trailing pseudo elements from selectors 1`] = `
"*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.prose {
  .ol .li::scroll-thumb::before, .ul .li::scroll-track::before {
    color: red;
  }
}
.dark\\:prose {
  &:is(.dark *) {
    .ol .li::scroll-thumb::before, .ul .li::scroll-track::before {
      color: red;
    }
  }
}"
`;

exports[`modifiers 1`] = `
"*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.prose {
  color: var(--tw-prose-body);
  max-width: 65ch;
  [class~="lead"] {
    color: var(--tw-prose-lead);
  }
  .strong {
    color: var(--tw-prose-bold);
    font-weight: 600;
  }
  .ol[type="A"] {
    list-style-type: upper-alpha;
  }
  .blockquote .p:first-of-type::before {
    content: open-quote;
  }
  .blockquote .p:last-of-type::after {
    content: close-quote;
  }
  .h4 .strong {
    font-weight: 700;
  }
  .figure > * {
    margin: 0;
  }
  .ol > .li::marker {
    font-weight: 400;
    color: var(--tw-prose-counters);
  }
  .code::before {
    content: "&#96;";
  }
  .code::after {
    content: "&#96;";
  }
}
.prose-lg {
  font-size: 18px;
  line-height: 1.75;
  .p {
    margin-top: 24px;
    margin-bottom: 24px;
  }
  [class~="lead"] {
    font-size: 22px;
  }
  .blockquote {
    margin-top: 40px;
    margin-bottom: 40px;
  }
   > .ul > .li {
    padding-left: 12px;
  }
  .h1 {
    font-size: 48px;
    margin-top: 0;
    margin-bottom: 40px;
  }
  .h2 {
    font-size: 30px;
    margin-top: 56px;
    margin-bottom: 32px;
  }
  .h3 {
    font-size: 24px;
    margin-top: 40px;
    margin-bottom: 16px;
  }
}"
`;

exports[`preifx > xxx 1`] = `
"*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.prose {
  color: var(--tw-prose-body);
  max-width: 65ch;
  p {
    margin-top: 1.25em;
    margin-bottom: 1.25em;
  }
  [class~="lead"] {
    color: var(--tw-prose-lead);
    font-size: 1.25em;
    line-height: 1.6;
    margin-top: 1.2em;
    margin-bottom: 1.2em;
  }
  a {
    color: var(--tw-prose-links);
    text-decoration: underline;
    font-weight: 500;
  }
  strong {
    color: var(--tw-prose-bold);
    font-weight: 600;
  }
  a strong {
    color: inherit;
  }
  blockquote strong {
    color: inherit;
  }
  thead th strong {
    color: inherit;
  }
  ol {
    list-style-type: decimal;
    margin-top: 1.25em;
    margin-bottom: 1.25em;
    padding-left: 1.625em;
  }
  ol[type="-a"] {
    list-style-type: upper-alpha;
  }
  ol[type="a"] {
    list-style-type: lower-alpha;
  }
  ol[type="-i"] {
    list-style-type: upper-roman;
  }
  ol[type="i"] {
    list-style-type: lower-roman;
  }
  ol[type="1"] {
    list-style-type: decimal;
  }
  ul {
    list-style-type: disc;
    margin-top: 1.25em;
    margin-bottom: 1.25em;
    padding-left: 1.625em;
  }
  ol > li::marker {
    font-weight: 400;
    color: var(--tw-prose-counters);
  }
  ul > li::marker {
    color: var(--tw-prose-bullets);
  }
  dt {
    color: var(--tw-prose-headings);
    font-weight: 600;
    margin-top: 1.25em;
  }
  hr {
    border-color: var(--tw-prose-hr);
    border-top-width: 1;
    margin-top: 3em;
    margin-bottom: 3em;
  }
  blockquote {
    font-weight: 500;
    font-style: italic;
    color: var(--tw-prose-quotes);
    border-left-width: 0.25rem;
    border-left-color: var(--tw-prose-quote-borders);
    quotes: "\\201C""\\201D""\\2018""\\2019";
    margin-top: 1.6em;
    margin-bottom: 1.6em;
    padding-left: 1em;
  }
  blockquote p:first-of-type::before {
    content: open-quote;
  }
  blockquote p:last-of-type::after {
    content: close-quote;
  }
  h1 {
    color: var(--tw-prose-headings);
    font-weight: 800;
    font-size: 2.25em;
    margin-top: 0;
    margin-bottom: 0.8888889em;
    line-height: 1.1111111;
  }
  h1 strong {
    font-weight: 900;
    color: inherit;
  }
  h2 {
    color: var(--tw-prose-headings);
    font-weight: 700;
    font-size: 1.5em;
    margin-top: 2em;
    margin-bottom: 1em;
    line-height: 1.3333333;
  }
  h2 strong {
    font-weight: 800;
    color: inherit;
  }
  h3 {
    color: var(--tw-prose-headings);
    font-weight: 600;
    font-size: 1.25em;
    margin-top: 1.6em;
    margin-bottom: 0.6em;
    line-height: 1.6;
  }
  h3 strong {
    font-weight: 700;
    color: inherit;
  }
  h4 {
    color: var(--tw-prose-headings);
    font-weight: 600;
    margin-top: 1.5em;
    margin-bottom: 0.5em;
    line-height: 1.5;
  }
  h4 strong {
    font-weight: 700;
    color: inherit;
  }
  img {
    margin-top: 2em;
    margin-bottom: 2em;
  }
  picture {
    display: block;
    margin-top: 2em;
    margin-bottom: 2em;
  }
  kbd {
    font-weight: 500;
    font-family: inherit;
    color: var(--tw-prose-kbd);
    box-shadow: 0 0 0 1px rgb(var(--tw-prose-kbd-shadows) / 10%), 0 3px 0 rgb(var(--tw-prose-kbd-shadows) / 10%);
    font-size: 0.875em;
    border-radius: 0.3125rem;
    padding-top: 0.1875em;
    padding-right: 0.375em;
    padding-bottom: 0.1875em;
    padding-left: 0.375em;
  }
  code {
    color: var(--tw-prose-code);
    font-weight: 600;
    font-size: 0.875em;
  }
  code::before {
    content: "\`";
  }
  code::after {
    content: "\`";
  }
  a code {
    color: inherit;
  }
  h1 code {
    color: inherit;
  }
  h2 code {
    color: inherit;
    font-size: 0.875em;
  }
  h3 code {
    color: inherit;
    font-size: 0.9em;
  }
  h4 code {
    color: inherit;
  }
  blockquote code {
    color: inherit;
  }
  thead th code {
    color: inherit;
  }
  pre {
    color: var(--tw-prose-pre-code);
    background-color: var(--tw-prose-pre-bg);
    overflow-x: auto;
    font-weight: 400;
    font-size: 0.875em;
    line-height: 1.7142857;
    margin-top: 1.7142857em;
    margin-bottom: 1.7142857em;
    border-radius: 0.375rem;
    padding-top: 0.8571429em;
    padding-right: 1.1428571em;
    padding-bottom: 0.8571429em;
    padding-left: 1.1428571em;
  }
  pre code {
    background-color: transparent;
    border-width: 0;
    border-radius: 0;
    padding: 0;
    font-weight: inherit;
    color: inherit;
    font-size: inherit;
    font-family: inherit;
    line-height: inherit;
  }
  pre code::before {
    content: none;
  }
  pre code::after {
    content: none;
  }
  table {
    width: 100%;
    table-layout: auto;
    text-align: left;
    margin-top: 2em;
    margin-bottom: 2em;
    font-size: 0.875em;
    line-height: 1.7142857;
  }
  thead {
    border-bottom-width: 1px;
    border-bottom-color: var(--tw-prose-th-borders);
  }
  thead th {
    color: var(--tw-prose-headings);
    font-weight: 600;
    vertical-align: bottom;
    padding-right: 0.5714286em;
    padding-bottom: 0.5714286em;
    padding-left: 0.5714286em;
  }
  tbody tr {
    border-bottom-width: 1px;
    border-bottom-color: var(--tw-prose-td-borders);
  }
  tbody tr:last-child {
    border-bottom-width: 0;
  }
  tbody td {
    vertical-align: baseline;
  }
  tfoot {
    border-top-width: 1px;
    border-top-color: var(--tw-prose-th-borders);
  }
  tfoot td {
    vertical-align: top;
  }
  figure > * {
    margin-top: 0;
    margin-bottom: 0;
  }
  figcaption {
    color: var(--tw-prose-captions);
    font-size: 0.875em;
    line-height: 1.4285714;
    margin-top: 0.8571429em;
  }
  --tw-prose-body: oklch(37.3% 0.034 259.733);
  --tw-prose-headings: oklch(21% 0.034 264.665);
  --tw-prose-lead: oklch(44.6% 0.03 256.802);
  --tw-prose-links: oklch(21% 0.034 264.665);
  --tw-prose-bold: oklch(21% 0.034 264.665);
  --tw-prose-counters: oklch(55.1% 0.027 264.364);
  --tw-prose-bullets: oklch(87.2% 0.01 258.338);
  --tw-prose-hr: oklch(92.8% 0.006 264.531);
  --tw-prose-quotes: oklch(21% 0.034 264.665);
  --tw-prose-quote-borders: oklch(92.8% 0.006 264.531);
  --tw-prose-captions: oklch(55.1% 0.027 264.364);
  --tw-prose-kbd: oklch(21% 0.034 264.665);
  --tw-prose-kbd-shadows: NaN NaN NaN;
  --tw-prose-code: oklch(21% 0.034 264.665);
  --tw-prose-pre-code: oklch(92.8% 0.006 264.531);
  --tw-prose-pre-bg: oklch(27.8% 0.033 256.848);
  --tw-prose-th-borders: oklch(87.2% 0.01 258.338);
  --tw-prose-td-borders: oklch(92.8% 0.006 264.531);
  --tw-prose-invert-body: oklch(87.2% 0.01 258.338);
  --tw-prose-invert-headings: #fff;
  --tw-prose-invert-lead: oklch(70.7% 0.022 261.325);
  --tw-prose-invert-links: #fff;
  --tw-prose-invert-bold: #fff;
  --tw-prose-invert-counters: oklch(70.7% 0.022 261.325);
  --tw-prose-invert-bullets: oklch(44.6% 0.03 256.802);
  --tw-prose-invert-hr: oklch(37.3% 0.034 259.733);
  --tw-prose-invert-quotes: oklch(96.7% 0.003 264.542);
  --tw-prose-invert-quote-borders: oklch(37.3% 0.034 259.733);
  --tw-prose-invert-captions: oklch(70.7% 0.022 261.325);
  --tw-prose-invert-kbd: #fff;
  --tw-prose-invert-kbd-shadows: 255 255 255;
  --tw-prose-invert-code: #fff;
  --tw-prose-invert-pre-code: oklch(87.2% 0.01 258.338);
  --tw-prose-invert-pre-bg: rgb(0 0 0 / 50%);
  --tw-prose-invert-th-borders: oklch(44.6% 0.03 256.802);
  --tw-prose-invert-td-borders: oklch(37.3% 0.034 259.733);
  font-size: 1rem;
  line-height: 1.75;
  picture > img {
    margin-top: 0;
    margin-bottom: 0;
  }
  video {
    margin-top: 2em;
    margin-bottom: 2em;
  }
  li {
    margin-top: 0.5em;
    margin-bottom: 0.5em;
  }
  ol > li {
    padding-left: 0.375em;
  }
  ul > li {
    padding-left: 0.375em;
  }
   > ul > li p {
    margin-top: 0.75em;
    margin-bottom: 0.75em;
  }
   > ul > li > *:first-child {
    margin-top: 1.25em;
  }
   > ul > li > *:last-child {
    margin-bottom: 1.25em;
  }
   > ol > li > *:first-child {
    margin-top: 1.25em;
  }
   > ol > li > *:last-child {
    margin-bottom: 1.25em;
  }
  ul ul, ul ol, ol ul, ol ol {
    margin-top: 0.75em;
    margin-bottom: 0.75em;
  }
  dl {
    margin-top: 1.25em;
    margin-bottom: 1.25em;
  }
  dd {
    margin-top: 0.5em;
    padding-left: 1.625em;
  }
  hr + * {
    margin-top: 0;
  }
  h2 + * {
    margin-top: 0;
  }
  h3 + * {
    margin-top: 0;
  }
  h4 + * {
    margin-top: 0;
  }
  thead th:first-child {
    padding-left: 0;
  }
  thead th:last-child {
    padding-right: 0;
  }
  tbody td, tfoot td {
    padding-top: 0.5714286em;
    padding-right: 0.5714286em;
    padding-bottom: 0.5714286em;
    padding-left: 0.5714286em;
  }
  tbody td:first-child, tfoot td:first-child {
    padding-left: 0;
  }
  tbody td:last-child, tfoot td:last-child {
    padding-right: 0;
  }
  figure {
    margin-top: 2em;
    margin-bottom: 2em;
  }
}"
`;

exports[`preifx > xxx case 0 1`] = `
"*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.prose {
  color: var(--tw-prose-body);
  max-width: 65ch;
  .p {
    margin-top: 1.25em;
    margin-bottom: 1.25em;
  }
  [class~="lead"] {
    color: var(--tw-prose-lead);
    font-size: 1.25em;
    line-height: 1.6;
    margin-top: 1.2em;
    margin-bottom: 1.2em;
  }
  .a {
    color: var(--tw-prose-links);
    text-decoration: underline;
    font-weight: 500;
  }
  .strong {
    color: var(--tw-prose-bold);
    font-weight: 600;
  }
  .a .strong {
    color: inherit;
  }
  .blockquote .strong {
    color: inherit;
  }
  .thead .th .strong {
    color: inherit;
  }
  .ol {
    list-style-type: decimal;
    margin-top: 1.25em;
    margin-bottom: 1.25em;
    padding-left: 1.625em;
  }
  .ol[type="A"] {
    list-style-type: upper-alpha;
  }
  .ol[type="a"] {
    list-style-type: lower-alpha;
  }
  .ol[type="I"] {
    list-style-type: upper-roman;
  }
  .ol[type="i"] {
    list-style-type: lower-roman;
  }
  .ol[type="1"] {
    list-style-type: decimal;
  }
  .ul {
    list-style-type: disc;
    margin-top: 1.25em;
    margin-bottom: 1.25em;
    padding-left: 1.625em;
  }
  .ol > .li::marker {
    font-weight: 400;
    color: var(--tw-prose-counters);
  }
  .ul > .li::marker {
    color: var(--tw-prose-bullets);
  }
  .dt {
    color: var(--tw-prose-headings);
    font-weight: 600;
    margin-top: 1.25em;
  }
  .hr {
    border-color: var(--tw-prose-hr);
    border-top-width: 1;
    margin-top: 3em;
    margin-bottom: 3em;
  }
  .blockquote {
    font-weight: 500;
    font-style: italic;
    color: var(--tw-prose-quotes);
    border-left-width: 0.25rem;
    border-left-color: var(--tw-prose-quote-borders);
    quotes: "\\201C""\\201D""\\2018""\\2019";
    margin-top: 1.6em;
    margin-bottom: 1.6em;
    padding-left: 1em;
  }
  .blockquote .p:first-of-type::before {
    content: open-quote;
  }
  .blockquote .p:last-of-type::after {
    content: close-quote;
  }
  .h1 {
    color: var(--tw-prose-headings);
    font-weight: 800;
    font-size: 2.25em;
    margin-top: 0;
    margin-bottom: 0.8888889em;
    line-height: 1.1111111;
  }
  .h1 .strong {
    font-weight: 900;
    color: inherit;
  }
  .h2 {
    color: var(--tw-prose-headings);
    font-weight: 700;
    font-size: 1.5em;
    margin-top: 2em;
    margin-bottom: 1em;
    line-height: 1.3333333;
  }
  .h2 .strong {
    font-weight: 800;
    color: inherit;
  }
  .h3 {
    color: var(--tw-prose-headings);
    font-weight: 600;
    font-size: 1.25em;
    margin-top: 1.6em;
    margin-bottom: 0.6em;
    line-height: 1.6;
  }
  .h3 .strong {
    font-weight: 700;
    color: inherit;
  }
  .h4 {
    color: var(--tw-prose-headings);
    font-weight: 600;
    margin-top: 1.5em;
    margin-bottom: 0.5em;
    line-height: 1.5;
  }
  .h4 .strong {
    font-weight: 700;
    color: inherit;
  }
  .img {
    margin-top: 2em;
    margin-bottom: 2em;
  }
  .picture {
    display: block;
    margin-top: 2em;
    margin-bottom: 2em;
  }
  .kbd {
    font-weight: 500;
    font-family: inherit;
    color: var(--tw-prose-kbd);
    box-shadow: 0 0 0 1px rgb(var(--tw-prose-kbd-shadows) / 10%), 0 3px 0 rgb(var(--tw-prose-kbd-shadows) / 10%);
    font-size: 0.875em;
    border-radius: 0.3125rem;
    padding-top: 0.1875em;
    padding-right: 0.375em;
    padding-bottom: 0.1875em;
    padding-left: 0.375em;
  }
  .code {
    color: var(--tw-prose-code);
    font-weight: 600;
    font-size: 0.875em;
  }
  .code::before {
    content: "\`";
  }
  .code::after {
    content: "\`";
  }
  .a .code {
    color: inherit;
  }
  .h1 .code {
    color: inherit;
  }
  .h2 .code {
    color: inherit;
    font-size: 0.875em;
  }
  .h3 .code {
    color: inherit;
    font-size: 0.9em;
  }
  .h4 .code {
    color: inherit;
  }
  .blockquote .code {
    color: inherit;
  }
  .thead .th .code {
    color: inherit;
  }
  .pre {
    color: var(--tw-prose-pre-code);
    background-color: var(--tw-prose-pre-bg);
    overflow-x: auto;
    font-weight: 400;
    font-size: 0.875em;
    line-height: 1.7142857;
    margin-top: 1.7142857em;
    margin-bottom: 1.7142857em;
    border-radius: 0.375rem;
    padding-top: 0.8571429em;
    padding-right: 1.1428571em;
    padding-bottom: 0.8571429em;
    padding-left: 1.1428571em;
  }
  .pre .code {
    background-color: transparent;
    border-width: 0;
    border-radius: 0;
    padding: 0;
    font-weight: inherit;
    color: inherit;
    font-size: inherit;
    font-family: inherit;
    line-height: inherit;
  }
  .pre .code::before {
    content: none;
  }
  .pre .code::after {
    content: none;
  }
  .table {
    width: 100%;
    table-layout: auto;
    text-align: left;
    margin-top: 2em;
    margin-bottom: 2em;
    font-size: 0.875em;
    line-height: 1.7142857;
  }
  .thead {
    border-bottom-width: 1px;
    border-bottom-color: var(--tw-prose-th-borders);
  }
  .thead .th {
    color: var(--tw-prose-headings);
    font-weight: 600;
    vertical-align: bottom;
    padding-right: 0.5714286em;
    padding-bottom: 0.5714286em;
    padding-left: 0.5714286em;
  }
  .tbody .tr {
    border-bottom-width: 1px;
    border-bottom-color: var(--tw-prose-td-borders);
  }
  .tbody .tr:last-child {
    border-bottom-width: 0;
  }
  .tbody .td {
    vertical-align: baseline;
  }
  .tfoot {
    border-top-width: 1px;
    border-top-color: var(--tw-prose-th-borders);
  }
  .tfoot .td {
    vertical-align: top;
  }
  .figure > * {
    margin-top: 0;
    margin-bottom: 0;
  }
  .figcaption {
    color: var(--tw-prose-captions);
    font-size: 0.875em;
    line-height: 1.4285714;
    margin-top: 0.8571429em;
  }
  --tw-prose-body: oklch(37.3% 0.034 259.733);
  --tw-prose-headings: oklch(21% 0.034 264.665);
  --tw-prose-lead: oklch(44.6% 0.03 256.802);
  --tw-prose-links: oklch(21% 0.034 264.665);
  --tw-prose-bold: oklch(21% 0.034 264.665);
  --tw-prose-counters: oklch(55.1% 0.027 264.364);
  --tw-prose-bullets: oklch(87.2% 0.01 258.338);
  --tw-prose-hr: oklch(92.8% 0.006 264.531);
  --tw-prose-quotes: oklch(21% 0.034 264.665);
  --tw-prose-quote-borders: oklch(92.8% 0.006 264.531);
  --tw-prose-captions: oklch(55.1% 0.027 264.364);
  --tw-prose-kbd: oklch(21% 0.034 264.665);
  --tw-prose-kbd-shadows: NaN NaN NaN;
  --tw-prose-code: oklch(21% 0.034 264.665);
  --tw-prose-pre-code: oklch(92.8% 0.006 264.531);
  --tw-prose-pre-bg: oklch(27.8% 0.033 256.848);
  --tw-prose-th-borders: oklch(87.2% 0.01 258.338);
  --tw-prose-td-borders: oklch(92.8% 0.006 264.531);
  --tw-prose-invert-body: oklch(87.2% 0.01 258.338);
  --tw-prose-invert-headings: #fff;
  --tw-prose-invert-lead: oklch(70.7% 0.022 261.325);
  --tw-prose-invert-links: #fff;
  --tw-prose-invert-bold: #fff;
  --tw-prose-invert-counters: oklch(70.7% 0.022 261.325);
  --tw-prose-invert-bullets: oklch(44.6% 0.03 256.802);
  --tw-prose-invert-hr: oklch(37.3% 0.034 259.733);
  --tw-prose-invert-quotes: oklch(96.7% 0.003 264.542);
  --tw-prose-invert-quote-borders: oklch(37.3% 0.034 259.733);
  --tw-prose-invert-captions: oklch(70.7% 0.022 261.325);
  --tw-prose-invert-kbd: #fff;
  --tw-prose-invert-kbd-shadows: 255 255 255;
  --tw-prose-invert-code: #fff;
  --tw-prose-invert-pre-code: oklch(87.2% 0.01 258.338);
  --tw-prose-invert-pre-bg: rgb(0 0 0 / 50%);
  --tw-prose-invert-th-borders: oklch(44.6% 0.03 256.802);
  --tw-prose-invert-td-borders: oklch(37.3% 0.034 259.733);
  font-size: 1rem;
  line-height: 1.75;
  .picture > .img {
    margin-top: 0;
    margin-bottom: 0;
  }
  .video {
    margin-top: 2em;
    margin-bottom: 2em;
  }
  .li {
    margin-top: 0.5em;
    margin-bottom: 0.5em;
  }
  .ol > .li {
    padding-left: 0.375em;
  }
  .ul > .li {
    padding-left: 0.375em;
  }
   > .ul > .li .p {
    margin-top: 0.75em;
    margin-bottom: 0.75em;
  }
   > .ul > .li > *:first-child {
    margin-top: 1.25em;
  }
   > .ul > .li > *:last-child {
    margin-bottom: 1.25em;
  }
   > .ol > .li > *:first-child {
    margin-top: 1.25em;
  }
   > .ol > .li > *:last-child {
    margin-bottom: 1.25em;
  }
  .ul .ul, .ul .ol, .ol .ul, .ol .ol {
    margin-top: 0.75em;
    margin-bottom: 0.75em;
  }
  .dl {
    margin-top: 1.25em;
    margin-bottom: 1.25em;
  }
  .dd {
    margin-top: 0.5em;
    padding-left: 1.625em;
  }
  .hr + * {
    margin-top: 0;
  }
  .h2 + * {
    margin-top: 0;
  }
  .h3 + * {
    margin-top: 0;
  }
  .h4 + * {
    margin-top: 0;
  }
  .thead .th:first-child {
    padding-left: 0;
  }
  .thead .th:last-child {
    padding-right: 0;
  }
  .tbody .td, .tfoot .td {
    padding-top: 0.5714286em;
    padding-right: 0.5714286em;
    padding-bottom: 0.5714286em;
    padding-left: 0.5714286em;
  }
  .tbody .td:first-child, .tfoot .td:first-child {
    padding-left: 0;
  }
  .tbody .td:last-child, .tfoot .td:last-child {
    padding-right: 0;
  }
  .figure {
    margin-top: 2em;
    margin-bottom: 2em;
  }
}"
`;

exports[`preifx > xxx case 1 1`] = `
"*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.prose {
  color: var(--tw-prose-body);
  max-width: 65ch;
  .ice-p {
    margin-top: 1.25em;
    margin-bottom: 1.25em;
  }
  [class~="lead"] {
    color: var(--tw-prose-lead);
    font-size: 1.25em;
    line-height: 1.6;
    margin-top: 1.2em;
    margin-bottom: 1.2em;
  }
  .ice-a {
    color: var(--tw-prose-links);
    text-decoration: underline;
    font-weight: 500;
  }
  .ice-strong {
    color: var(--tw-prose-bold);
    font-weight: 600;
  }
  .ice-a .ice-strong {
    color: inherit;
  }
  .ice-blockquote .ice-strong {
    color: inherit;
  }
  .ice-thead .ice-th .ice-strong {
    color: inherit;
  }
  .ice-ol {
    list-style-type: decimal;
    margin-top: 1.25em;
    margin-bottom: 1.25em;
    padding-left: 1.625em;
  }
  .ice-ol[type="A"] {
    list-style-type: upper-alpha;
  }
  .ice-ol[type="a"] {
    list-style-type: lower-alpha;
  }
  .ice-ol[type="I"] {
    list-style-type: upper-roman;
  }
  .ice-ol[type="i"] {
    list-style-type: lower-roman;
  }
  .ice-ol[type="1"] {
    list-style-type: decimal;
  }
  .ice-ul {
    list-style-type: disc;
    margin-top: 1.25em;
    margin-bottom: 1.25em;
    padding-left: 1.625em;
  }
  .ice-ol > .ice-li::marker {
    font-weight: 400;
    color: var(--tw-prose-counters);
  }
  .ice-ul > .ice-li::marker {
    color: var(--tw-prose-bullets);
  }
  .ice-dt {
    color: var(--tw-prose-headings);
    font-weight: 600;
    margin-top: 1.25em;
  }
  .ice-hr {
    border-color: var(--tw-prose-hr);
    border-top-width: 1;
    margin-top: 3em;
    margin-bottom: 3em;
  }
  .ice-blockquote {
    font-weight: 500;
    font-style: italic;
    color: var(--tw-prose-quotes);
    border-left-width: 0.25rem;
    border-left-color: var(--tw-prose-quote-borders);
    quotes: "\\201C""\\201D""\\2018""\\2019";
    margin-top: 1.6em;
    margin-bottom: 1.6em;
    padding-left: 1em;
  }
  .ice-blockquote .ice-p:first-of-type::before {
    content: open-quote;
  }
  .ice-blockquote .ice-p:last-of-type::after {
    content: close-quote;
  }
  .ice-h1 {
    color: var(--tw-prose-headings);
    font-weight: 800;
    font-size: 2.25em;
    margin-top: 0;
    margin-bottom: 0.8888889em;
    line-height: 1.1111111;
  }
  .ice-h1 .ice-strong {
    font-weight: 900;
    color: inherit;
  }
  .ice-h2 {
    color: var(--tw-prose-headings);
    font-weight: 700;
    font-size: 1.5em;
    margin-top: 2em;
    margin-bottom: 1em;
    line-height: 1.3333333;
  }
  .ice-h2 .ice-strong {
    font-weight: 800;
    color: inherit;
  }
  .ice-h3 {
    color: var(--tw-prose-headings);
    font-weight: 600;
    font-size: 1.25em;
    margin-top: 1.6em;
    margin-bottom: 0.6em;
    line-height: 1.6;
  }
  .ice-h3 .ice-strong {
    font-weight: 700;
    color: inherit;
  }
  .ice-h4 {
    color: var(--tw-prose-headings);
    font-weight: 600;
    margin-top: 1.5em;
    margin-bottom: 0.5em;
    line-height: 1.5;
  }
  .ice-h4 .ice-strong {
    font-weight: 700;
    color: inherit;
  }
  .ice-img {
    margin-top: 2em;
    margin-bottom: 2em;
  }
  .ice-picture {
    display: block;
    margin-top: 2em;
    margin-bottom: 2em;
  }
  .ice-kbd {
    font-weight: 500;
    font-family: inherit;
    color: var(--tw-prose-kbd);
    box-shadow: 0 0 0 1px rgb(var(--tw-prose-kbd-shadows) / 10%), 0 3px 0 rgb(var(--tw-prose-kbd-shadows) / 10%);
    font-size: 0.875em;
    border-radius: 0.3125rem;
    padding-top: 0.1875em;
    padding-right: 0.375em;
    padding-bottom: 0.1875em;
    padding-left: 0.375em;
  }
  .ice-code {
    color: var(--tw-prose-code);
    font-weight: 600;
    font-size: 0.875em;
  }
  .ice-code::before {
    content: "\`";
  }
  .ice-code::after {
    content: "\`";
  }
  .ice-a .ice-code {
    color: inherit;
  }
  .ice-h1 .ice-code {
    color: inherit;
  }
  .ice-h2 .ice-code {
    color: inherit;
    font-size: 0.875em;
  }
  .ice-h3 .ice-code {
    color: inherit;
    font-size: 0.9em;
  }
  .ice-h4 .ice-code {
    color: inherit;
  }
  .ice-blockquote .ice-code {
    color: inherit;
  }
  .ice-thead .ice-th .ice-code {
    color: inherit;
  }
  .ice-pre {
    color: var(--tw-prose-pre-code);
    background-color: var(--tw-prose-pre-bg);
    overflow-x: auto;
    font-weight: 400;
    font-size: 0.875em;
    line-height: 1.7142857;
    margin-top: 1.7142857em;
    margin-bottom: 1.7142857em;
    border-radius: 0.375rem;
    padding-top: 0.8571429em;
    padding-right: 1.1428571em;
    padding-bottom: 0.8571429em;
    padding-left: 1.1428571em;
  }
  .ice-pre .ice-code {
    background-color: transparent;
    border-width: 0;
    border-radius: 0;
    padding: 0;
    font-weight: inherit;
    color: inherit;
    font-size: inherit;
    font-family: inherit;
    line-height: inherit;
  }
  .ice-pre .ice-code::before {
    content: none;
  }
  .ice-pre .ice-code::after {
    content: none;
  }
  .ice-table {
    width: 100%;
    table-layout: auto;
    text-align: left;
    margin-top: 2em;
    margin-bottom: 2em;
    font-size: 0.875em;
    line-height: 1.7142857;
  }
  .ice-thead {
    border-bottom-width: 1px;
    border-bottom-color: var(--tw-prose-th-borders);
  }
  .ice-thead .ice-th {
    color: var(--tw-prose-headings);
    font-weight: 600;
    vertical-align: bottom;
    padding-right: 0.5714286em;
    padding-bottom: 0.5714286em;
    padding-left: 0.5714286em;
  }
  .ice-tbody .ice-tr {
    border-bottom-width: 1px;
    border-bottom-color: var(--tw-prose-td-borders);
  }
  .ice-tbody .ice-tr:last-child {
    border-bottom-width: 0;
  }
  .ice-tbody .ice-td {
    vertical-align: baseline;
  }
  .ice-tfoot {
    border-top-width: 1px;
    border-top-color: var(--tw-prose-th-borders);
  }
  .ice-tfoot .ice-td {
    vertical-align: top;
  }
  .ice-figure > * {
    margin-top: 0;
    margin-bottom: 0;
  }
  .ice-figcaption {
    color: var(--tw-prose-captions);
    font-size: 0.875em;
    line-height: 1.4285714;
    margin-top: 0.8571429em;
  }
  --tw-prose-body: oklch(37.3% 0.034 259.733);
  --tw-prose-headings: oklch(21% 0.034 264.665);
  --tw-prose-lead: oklch(44.6% 0.03 256.802);
  --tw-prose-links: oklch(21% 0.034 264.665);
  --tw-prose-bold: oklch(21% 0.034 264.665);
  --tw-prose-counters: oklch(55.1% 0.027 264.364);
  --tw-prose-bullets: oklch(87.2% 0.01 258.338);
  --tw-prose-hr: oklch(92.8% 0.006 264.531);
  --tw-prose-quotes: oklch(21% 0.034 264.665);
  --tw-prose-quote-borders: oklch(92.8% 0.006 264.531);
  --tw-prose-captions: oklch(55.1% 0.027 264.364);
  --tw-prose-kbd: oklch(21% 0.034 264.665);
  --tw-prose-kbd-shadows: NaN NaN NaN;
  --tw-prose-code: oklch(21% 0.034 264.665);
  --tw-prose-pre-code: oklch(92.8% 0.006 264.531);
  --tw-prose-pre-bg: oklch(27.8% 0.033 256.848);
  --tw-prose-th-borders: oklch(87.2% 0.01 258.338);
  --tw-prose-td-borders: oklch(92.8% 0.006 264.531);
  --tw-prose-invert-body: oklch(87.2% 0.01 258.338);
  --tw-prose-invert-headings: #fff;
  --tw-prose-invert-lead: oklch(70.7% 0.022 261.325);
  --tw-prose-invert-links: #fff;
  --tw-prose-invert-bold: #fff;
  --tw-prose-invert-counters: oklch(70.7% 0.022 261.325);
  --tw-prose-invert-bullets: oklch(44.6% 0.03 256.802);
  --tw-prose-invert-hr: oklch(37.3% 0.034 259.733);
  --tw-prose-invert-quotes: oklch(96.7% 0.003 264.542);
  --tw-prose-invert-quote-borders: oklch(37.3% 0.034 259.733);
  --tw-prose-invert-captions: oklch(70.7% 0.022 261.325);
  --tw-prose-invert-kbd: #fff;
  --tw-prose-invert-kbd-shadows: 255 255 255;
  --tw-prose-invert-code: #fff;
  --tw-prose-invert-pre-code: oklch(87.2% 0.01 258.338);
  --tw-prose-invert-pre-bg: rgb(0 0 0 / 50%);
  --tw-prose-invert-th-borders: oklch(44.6% 0.03 256.802);
  --tw-prose-invert-td-borders: oklch(37.3% 0.034 259.733);
  font-size: 1rem;
  line-height: 1.75;
  .ice-picture > .ice-img {
    margin-top: 0;
    margin-bottom: 0;
  }
  .ice-video {
    margin-top: 2em;
    margin-bottom: 2em;
  }
  .ice-li {
    margin-top: 0.5em;
    margin-bottom: 0.5em;
  }
  .ice-ol > .ice-li {
    padding-left: 0.375em;
  }
  .ice-ul > .ice-li {
    padding-left: 0.375em;
  }
   > .ice-ul > .ice-li .ice-p {
    margin-top: 0.75em;
    margin-bottom: 0.75em;
  }
   > .ice-ul > .ice-li > *:first-child {
    margin-top: 1.25em;
  }
   > .ice-ul > .ice-li > *:last-child {
    margin-bottom: 1.25em;
  }
   > .ice-ol > .ice-li > *:first-child {
    margin-top: 1.25em;
  }
   > .ice-ol > .ice-li > *:last-child {
    margin-bottom: 1.25em;
  }
  .ice-ul .ice-ul, .ice-ul .ice-ol, .ice-ol .ice-ul, .ice-ol .ice-ol {
    margin-top: 0.75em;
    margin-bottom: 0.75em;
  }
  .ice-dl {
    margin-top: 1.25em;
    margin-bottom: 1.25em;
  }
  .ice-dd {
    margin-top: 0.5em;
    padding-left: 1.625em;
  }
  .ice-hr + * {
    margin-top: 0;
  }
  .ice-h2 + * {
    margin-top: 0;
  }
  .ice-h3 + * {
    margin-top: 0;
  }
  .ice-h4 + * {
    margin-top: 0;
  }
  .ice-thead .ice-th:first-child {
    padding-left: 0;
  }
  .ice-thead .ice-th:last-child {
    padding-right: 0;
  }
  .ice-tbody .ice-td, .ice-tfoot .ice-td {
    padding-top: 0.5714286em;
    padding-right: 0.5714286em;
    padding-bottom: 0.5714286em;
    padding-left: 0.5714286em;
  }
  .ice-tbody .ice-td:first-child, .ice-tfoot .ice-td:first-child {
    padding-left: 0;
  }
  .ice-tbody .ice-td:last-child, .ice-tfoot .ice-td:last-child {
    padding-right: 0;
  }
  .ice-figure {
    margin-top: 2em;
    margin-bottom: 2em;
  }
}"
`;

exports[`should be possible to specify custom h5 and h6 styles 1`] = `
":root, :host {
  --text-sm: .875rem;
  --text-sm--line-height: calc(1.25/.875);
  --text-xl: 1.25rem;
  --text-xl--line-height: calc(1.75/1.25);
}
*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.prose {
  color: var(--tw-prose-body);
  max-width: 65ch;
  .p {
    margin-top: 1.25em;
    margin-bottom: 1.25em;
  }
  [class~="lead"] {
    color: var(--tw-prose-lead);
    font-size: 1.25em;
    line-height: 1.6;
    margin-top: 1.2em;
    margin-bottom: 1.2em;
  }
  .a {
    color: var(--tw-prose-links);
    text-decoration: underline;
    font-weight: 500;
  }
  .strong {
    color: var(--tw-prose-bold);
    font-weight: 600;
  }
  .a .strong {
    color: inherit;
  }
  .blockquote .strong {
    color: inherit;
  }
  .thead .th .strong {
    color: inherit;
  }
  .ol {
    list-style-type: decimal;
    margin-top: 1.25em;
    margin-bottom: 1.25em;
    padding-left: 1.625em;
  }
  .ol[type="A"] {
    list-style-type: upper-alpha;
  }
  .ol[type="a"] {
    list-style-type: lower-alpha;
  }
  .ol[type="I"] {
    list-style-type: upper-roman;
  }
  .ol[type="i"] {
    list-style-type: lower-roman;
  }
  .ol[type="1"] {
    list-style-type: decimal;
  }
  .ul {
    list-style-type: disc;
    margin-top: 1.25em;
    margin-bottom: 1.25em;
    padding-left: 1.625em;
  }
  .ol > .li::marker {
    font-weight: 400;
    color: var(--tw-prose-counters);
  }
  .ul > .li::marker {
    color: var(--tw-prose-bullets);
  }
  .dt {
    color: var(--tw-prose-headings);
    font-weight: 600;
    margin-top: 1.25em;
  }
  .hr {
    border-color: var(--tw-prose-hr);
    border-top-width: 1;
    margin-top: 3em;
    margin-bottom: 3em;
  }
  .blockquote {
    font-weight: 500;
    font-style: italic;
    color: var(--tw-prose-quotes);
    border-left-width: 0.25rem;
    border-left-color: var(--tw-prose-quote-borders);
    quotes: "\\201C""\\201D""\\2018""\\2019";
    margin-top: 1.6em;
    margin-bottom: 1.6em;
    padding-left: 1em;
  }
  .blockquote .p:first-of-type::before {
    content: open-quote;
  }
  .blockquote .p:last-of-type::after {
    content: close-quote;
  }
  .h1 {
    color: var(--tw-prose-headings);
    font-weight: 800;
    font-size: 2.25em;
    margin-top: 0;
    margin-bottom: 0.8888889em;
    line-height: 1.1111111;
  }
  .h1 .strong {
    font-weight: 900;
    color: inherit;
  }
  .h2 {
    color: var(--tw-prose-headings);
    font-weight: 700;
    font-size: 1.5em;
    margin-top: 2em;
    margin-bottom: 1em;
    line-height: 1.3333333;
  }
  .h2 .strong {
    font-weight: 800;
    color: inherit;
  }
  .h3 {
    color: var(--tw-prose-headings);
    font-weight: 600;
    font-size: 1.25em;
    margin-top: 1.6em;
    margin-bottom: 0.6em;
    line-height: 1.6;
  }
  .h3 .strong {
    font-weight: 700;
    color: inherit;
  }
  .h4 {
    color: var(--tw-prose-headings);
    font-weight: 600;
    margin-top: 1.5em;
    margin-bottom: 0.5em;
    line-height: 1.5;
  }
  .h4 .strong {
    font-weight: 700;
    color: inherit;
  }
  .img {
    margin-top: 2em;
    margin-bottom: 2em;
  }
  .picture {
    display: block;
    margin-top: 2em;
    margin-bottom: 2em;
  }
  .kbd {
    font-weight: 500;
    font-family: inherit;
    color: var(--tw-prose-kbd);
    box-shadow: 0 0 0 1px rgb(var(--tw-prose-kbd-shadows) / 10%), 0 3px 0 rgb(var(--tw-prose-kbd-shadows) / 10%);
    font-size: 0.875em;
    border-radius: 0.3125rem;
    padding-top: 0.1875em;
    padding-right: 0.375em;
    padding-bottom: 0.1875em;
    padding-left: 0.375em;
  }
  .code {
    color: var(--tw-prose-code);
    font-weight: 600;
    font-size: 0.875em;
  }
  .code::before {
    content: "\`";
  }
  .code::after {
    content: "\`";
  }
  .a .code {
    color: inherit;
  }
  .h1 .code {
    color: inherit;
  }
  .h2 .code {
    color: inherit;
    font-size: 0.875em;
  }
  .h3 .code {
    color: inherit;
    font-size: 0.9em;
  }
  .h4 .code {
    color: inherit;
  }
  .blockquote .code {
    color: inherit;
  }
  .thead .th .code {
    color: inherit;
  }
  .pre {
    color: var(--tw-prose-pre-code);
    background-color: var(--tw-prose-pre-bg);
    overflow-x: auto;
    font-weight: 400;
    font-size: 0.875em;
    line-height: 1.7142857;
    margin-top: 1.7142857em;
    margin-bottom: 1.7142857em;
    border-radius: 0.375rem;
    padding-top: 0.8571429em;
    padding-right: 1.1428571em;
    padding-bottom: 0.8571429em;
    padding-left: 1.1428571em;
  }
  .pre .code {
    background-color: transparent;
    border-width: 0;
    border-radius: 0;
    padding: 0;
    font-weight: inherit;
    color: inherit;
    font-size: inherit;
    font-family: inherit;
    line-height: inherit;
  }
  .pre .code::before {
    content: none;
  }
  .pre .code::after {
    content: none;
  }
  .table {
    width: 100%;
    table-layout: auto;
    text-align: left;
    margin-top: 2em;
    margin-bottom: 2em;
    font-size: 0.875em;
    line-height: 1.7142857;
  }
  .thead {
    border-bottom-width: 1px;
    border-bottom-color: var(--tw-prose-th-borders);
  }
  .thead .th {
    color: var(--tw-prose-headings);
    font-weight: 600;
    vertical-align: bottom;
    padding-right: 0.5714286em;
    padding-bottom: 0.5714286em;
    padding-left: 0.5714286em;
  }
  .tbody .tr {
    border-bottom-width: 1px;
    border-bottom-color: var(--tw-prose-td-borders);
  }
  .tbody .tr:last-child {
    border-bottom-width: 0;
  }
  .tbody .td {
    vertical-align: baseline;
  }
  .tfoot {
    border-top-width: 1px;
    border-top-color: var(--tw-prose-th-borders);
  }
  .tfoot .td {
    vertical-align: top;
  }
  .figure > * {
    margin-top: 0;
    margin-bottom: 0;
  }
  .figcaption {
    color: var(--tw-prose-captions);
    font-size: 0.875em;
    line-height: 1.4285714;
    margin-top: 0.8571429em;
  }
  --tw-prose-body: oklch(37.3% 0.034 259.733);
  --tw-prose-headings: oklch(21% 0.034 264.665);
  --tw-prose-lead: oklch(44.6% 0.03 256.802);
  --tw-prose-links: oklch(21% 0.034 264.665);
  --tw-prose-bold: oklch(21% 0.034 264.665);
  --tw-prose-counters: oklch(55.1% 0.027 264.364);
  --tw-prose-bullets: oklch(87.2% 0.01 258.338);
  --tw-prose-hr: oklch(92.8% 0.006 264.531);
  --tw-prose-quotes: oklch(21% 0.034 264.665);
  --tw-prose-quote-borders: oklch(92.8% 0.006 264.531);
  --tw-prose-captions: oklch(55.1% 0.027 264.364);
  --tw-prose-kbd: oklch(21% 0.034 264.665);
  --tw-prose-kbd-shadows: NaN NaN NaN;
  --tw-prose-code: oklch(21% 0.034 264.665);
  --tw-prose-pre-code: oklch(92.8% 0.006 264.531);
  --tw-prose-pre-bg: oklch(27.8% 0.033 256.848);
  --tw-prose-th-borders: oklch(87.2% 0.01 258.338);
  --tw-prose-td-borders: oklch(92.8% 0.006 264.531);
  --tw-prose-invert-body: oklch(87.2% 0.01 258.338);
  --tw-prose-invert-headings: #fff;
  --tw-prose-invert-lead: oklch(70.7% 0.022 261.325);
  --tw-prose-invert-links: #fff;
  --tw-prose-invert-bold: #fff;
  --tw-prose-invert-counters: oklch(70.7% 0.022 261.325);
  --tw-prose-invert-bullets: oklch(44.6% 0.03 256.802);
  --tw-prose-invert-hr: oklch(37.3% 0.034 259.733);
  --tw-prose-invert-quotes: oklch(96.7% 0.003 264.542);
  --tw-prose-invert-quote-borders: oklch(37.3% 0.034 259.733);
  --tw-prose-invert-captions: oklch(70.7% 0.022 261.325);
  --tw-prose-invert-kbd: #fff;
  --tw-prose-invert-kbd-shadows: 255 255 255;
  --tw-prose-invert-code: #fff;
  --tw-prose-invert-pre-code: oklch(87.2% 0.01 258.338);
  --tw-prose-invert-pre-bg: rgb(0 0 0 / 50%);
  --tw-prose-invert-th-borders: oklch(44.6% 0.03 256.802);
  --tw-prose-invert-td-borders: oklch(37.3% 0.034 259.733);
  font-size: 1rem;
  line-height: 1.75;
  .picture > .img {
    margin-top: 0;
    margin-bottom: 0;
  }
  .video {
    margin-top: 2em;
    margin-bottom: 2em;
  }
  .li {
    margin-top: 0.5em;
    margin-bottom: 0.5em;
  }
  .ol > .li {
    padding-left: 0.375em;
  }
  .ul > .li {
    padding-left: 0.375em;
  }
   > .ul > .li .p {
    margin-top: 0.75em;
    margin-bottom: 0.75em;
  }
   > .ul > .li > *:first-child {
    margin-top: 1.25em;
  }
   > .ul > .li > *:last-child {
    margin-bottom: 1.25em;
  }
   > .ol > .li > *:first-child {
    margin-top: 1.25em;
  }
   > .ol > .li > *:last-child {
    margin-bottom: 1.25em;
  }
  .ul .ul, .ul .ol, .ol .ul, .ol .ol {
    margin-top: 0.75em;
    margin-bottom: 0.75em;
  }
  .dl {
    margin-top: 1.25em;
    margin-bottom: 1.25em;
  }
  .dd {
    margin-top: 0.5em;
    padding-left: 1.625em;
  }
  .hr + * {
    margin-top: 0;
  }
  .h2 + * {
    margin-top: 0;
  }
  .h3 + * {
    margin-top: 0;
  }
  .h4 + * {
    margin-top: 0;
  }
  .thead .th:first-child {
    padding-left: 0;
  }
  .thead .th:last-child {
    padding-right: 0;
  }
  .tbody .td, .tfoot .td {
    padding-top: 0.5714286em;
    padding-right: 0.5714286em;
    padding-bottom: 0.5714286em;
    padding-left: 0.5714286em;
  }
  .tbody .td:first-child, .tfoot .td:first-child {
    padding-left: 0;
  }
  .tbody .td:last-child, .tfoot .td:last-child {
    padding-right: 0;
  }
  .figure {
    margin-top: 2em;
    margin-bottom: 2em;
  }
}
.prose-h5\\:text-sm {
  & .h5 {
    font-size: var(--text-sm);
    line-height: var(--tw-leading, var(--text-sm--line-height));
  }
}
.prose-h6\\:text-xl {
  & .h6 {
    font-size: var(--text-xl);
    line-height: var(--tw-leading, var(--text-xl--line-height));
  }
}"
`;

exports[`should be possible to use nested syntax (&) when extending the config 1`] = `
"*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.prose {
  color: #000;
  max-width: 65ch;
  .p {
    margin-top: 1.25em;
    margin-bottom: 1.25em;
  }
  [class~="lead"] {
    color: var(--tw-prose-lead);
    font-size: 1.25em;
    line-height: 1.6;
    margin-top: 1.2em;
    margin-bottom: 1.2em;
  }
  .a {
    color: #888;
    text-decoration: underline;
    font-weight: 500;
    &:hover {
      color: #ff0000;
    }
  }
  .strong {
    color: var(--tw-prose-bold);
    font-weight: 600;
  }
  .a .strong {
    color: inherit;
  }
  .blockquote .strong {
    color: inherit;
  }
  .thead .th .strong {
    color: inherit;
  }
  .ol {
    list-style-type: decimal;
    margin-top: 1.25em;
    margin-bottom: 1.25em;
    padding-left: 1.625em;
  }
  .ol[type="A"] {
    list-style-type: upper-alpha;
  }
  .ol[type="a"] {
    list-style-type: lower-alpha;
  }
  .ol[type="I"] {
    list-style-type: upper-roman;
  }
  .ol[type="i"] {
    list-style-type: lower-roman;
  }
  .ol[type="1"] {
    list-style-type: decimal;
  }
  .ul {
    list-style-type: disc;
    margin-top: 1.25em;
    margin-bottom: 1.25em;
    padding-left: 1.625em;
  }
  .ol > .li::marker {
    font-weight: 400;
    color: var(--tw-prose-counters);
  }
  .ul > .li::marker {
    color: var(--tw-prose-bullets);
  }
  .dt {
    color: var(--tw-prose-headings);
    font-weight: 600;
    margin-top: 1.25em;
  }
  .hr {
    border-color: var(--tw-prose-hr);
    border-top-width: 1;
    margin-top: 3em;
    margin-bottom: 3em;
  }
  .blockquote {
    font-weight: 500;
    font-style: italic;
    color: var(--tw-prose-quotes);
    border-left-width: 0.25rem;
    border-left-color: var(--tw-prose-quote-borders);
    quotes: "\\201C""\\201D""\\2018""\\2019";
    margin-top: 1.6em;
    margin-bottom: 1.6em;
    padding-left: 1em;
  }
  .blockquote .p:first-of-type::before {
    content: open-quote;
  }
  .blockquote .p:last-of-type::after {
    content: close-quote;
  }
  .h1 {
    color: var(--tw-prose-headings);
    font-weight: 800;
    font-size: 2.25em;
    margin-top: 0;
    margin-bottom: 0.8888889em;
    line-height: 1.1111111;
  }
  .h1 .strong {
    font-weight: 900;
    color: inherit;
  }
  .h2 {
    color: var(--tw-prose-headings);
    font-weight: 700;
    font-size: 1.5em;
    margin-top: 2em;
    margin-bottom: 1em;
    line-height: 1.3333333;
  }
  .h2 .strong {
    font-weight: 800;
    color: inherit;
  }
  .h3 {
    color: var(--tw-prose-headings);
    font-weight: 600;
    font-size: 1.25em;
    margin-top: 1.6em;
    margin-bottom: 0.6em;
    line-height: 1.6;
  }
  .h3 .strong {
    font-weight: 700;
    color: inherit;
  }
  .h4 {
    color: var(--tw-prose-headings);
    font-weight: 600;
    margin-top: 1.5em;
    margin-bottom: 0.5em;
    line-height: 1.5;
  }
  .h4 .strong {
    font-weight: 700;
    color: inherit;
  }
  .img {
    margin-top: 2em;
    margin-bottom: 2em;
  }
  .picture {
    display: block;
    margin-top: 2em;
    margin-bottom: 2em;
  }
  .kbd {
    font-weight: 500;
    font-family: inherit;
    color: var(--tw-prose-kbd);
    box-shadow: 0 0 0 1px rgb(var(--tw-prose-kbd-shadows) / 10%), 0 3px 0 rgb(var(--tw-prose-kbd-shadows) / 10%);
    font-size: 0.875em;
    border-radius: 0.3125rem;
    padding-top: 0.1875em;
    padding-right: 0.375em;
    padding-bottom: 0.1875em;
    padding-left: 0.375em;
  }
  .code {
    color: var(--tw-prose-code);
    font-weight: 600;
    font-size: 0.875em;
  }
  .code::before {
    content: "\`";
  }
  .code::after {
    content: "\`";
  }
  .a .code {
    color: inherit;
  }
  .h1 .code {
    color: inherit;
  }
  .h2 .code {
    color: inherit;
    font-size: 0.875em;
  }
  .h3 .code {
    color: inherit;
    font-size: 0.9em;
  }
  .h4 .code {
    color: inherit;
  }
  .blockquote .code {
    color: inherit;
  }
  .thead .th .code {
    color: inherit;
  }
  .pre {
    color: var(--tw-prose-pre-code);
    background-color: var(--tw-prose-pre-bg);
    overflow-x: auto;
    font-weight: 400;
    font-size: 0.875em;
    line-height: 1.7142857;
    margin-top: 1.7142857em;
    margin-bottom: 1.7142857em;
    border-radius: 0.375rem;
    padding-top: 0.8571429em;
    padding-right: 1.1428571em;
    padding-bottom: 0.8571429em;
    padding-left: 1.1428571em;
  }
  .pre .code {
    background-color: transparent;
    border-width: 0;
    border-radius: 0;
    padding: 0;
    font-weight: inherit;
    color: inherit;
    font-size: inherit;
    font-family: inherit;
    line-height: inherit;
  }
  .pre .code::before {
    content: none;
  }
  .pre .code::after {
    content: none;
  }
  .table {
    width: 100%;
    table-layout: auto;
    text-align: left;
    margin-top: 2em;
    margin-bottom: 2em;
    font-size: 0.875em;
    line-height: 1.7142857;
  }
  .thead {
    border-bottom-width: 1px;
    border-bottom-color: var(--tw-prose-th-borders);
  }
  .thead .th {
    color: var(--tw-prose-headings);
    font-weight: 600;
    vertical-align: bottom;
    padding-right: 0.5714286em;
    padding-bottom: 0.5714286em;
    padding-left: 0.5714286em;
  }
  .tbody .tr {
    border-bottom-width: 1px;
    border-bottom-color: var(--tw-prose-td-borders);
  }
  .tbody .tr:last-child {
    border-bottom-width: 0;
  }
  .tbody .td {
    vertical-align: baseline;
  }
  .tfoot {
    border-top-width: 1px;
    border-top-color: var(--tw-prose-th-borders);
  }
  .tfoot .td {
    vertical-align: top;
  }
  .figure > * {
    margin-top: 0;
    margin-bottom: 0;
  }
  .figcaption {
    color: var(--tw-prose-captions);
    font-size: 0.875em;
    line-height: 1.4285714;
    margin-top: 0.8571429em;
  }
  --tw-prose-body: oklch(37.3% 0.034 259.733);
  --tw-prose-headings: oklch(21% 0.034 264.665);
  --tw-prose-lead: oklch(44.6% 0.03 256.802);
  --tw-prose-links: oklch(21% 0.034 264.665);
  --tw-prose-bold: oklch(21% 0.034 264.665);
  --tw-prose-counters: oklch(55.1% 0.027 264.364);
  --tw-prose-bullets: oklch(87.2% 0.01 258.338);
  --tw-prose-hr: oklch(92.8% 0.006 264.531);
  --tw-prose-quotes: oklch(21% 0.034 264.665);
  --tw-prose-quote-borders: oklch(92.8% 0.006 264.531);
  --tw-prose-captions: oklch(55.1% 0.027 264.364);
  --tw-prose-kbd: oklch(21% 0.034 264.665);
  --tw-prose-kbd-shadows: NaN NaN NaN;
  --tw-prose-code: oklch(21% 0.034 264.665);
  --tw-prose-pre-code: oklch(92.8% 0.006 264.531);
  --tw-prose-pre-bg: oklch(27.8% 0.033 256.848);
  --tw-prose-th-borders: oklch(87.2% 0.01 258.338);
  --tw-prose-td-borders: oklch(92.8% 0.006 264.531);
  --tw-prose-invert-body: oklch(87.2% 0.01 258.338);
  --tw-prose-invert-headings: #fff;
  --tw-prose-invert-lead: oklch(70.7% 0.022 261.325);
  --tw-prose-invert-links: #fff;
  --tw-prose-invert-bold: #fff;
  --tw-prose-invert-counters: oklch(70.7% 0.022 261.325);
  --tw-prose-invert-bullets: oklch(44.6% 0.03 256.802);
  --tw-prose-invert-hr: oklch(37.3% 0.034 259.733);
  --tw-prose-invert-quotes: oklch(96.7% 0.003 264.542);
  --tw-prose-invert-quote-borders: oklch(37.3% 0.034 259.733);
  --tw-prose-invert-captions: oklch(70.7% 0.022 261.325);
  --tw-prose-invert-kbd: #fff;
  --tw-prose-invert-kbd-shadows: 255 255 255;
  --tw-prose-invert-code: #fff;
  --tw-prose-invert-pre-code: oklch(87.2% 0.01 258.338);
  --tw-prose-invert-pre-bg: rgb(0 0 0 / 50%);
  --tw-prose-invert-th-borders: oklch(44.6% 0.03 256.802);
  --tw-prose-invert-td-borders: oklch(37.3% 0.034 259.733);
  font-size: 1rem;
  line-height: 1.75;
  .picture > .img {
    margin-top: 0;
    margin-bottom: 0;
  }
  .video {
    margin-top: 2em;
    margin-bottom: 2em;
  }
  .li {
    margin-top: 0.5em;
    margin-bottom: 0.5em;
  }
  .ol > .li {
    padding-left: 0.375em;
  }
  .ul > .li {
    padding-left: 0.375em;
  }
   > .ul > .li .p {
    margin-top: 0.75em;
    margin-bottom: 0.75em;
  }
   > .ul > .li > *:first-child {
    margin-top: 1.25em;
  }
   > .ul > .li > *:last-child {
    margin-bottom: 1.25em;
  }
   > .ol > .li > *:first-child {
    margin-top: 1.25em;
  }
   > .ol > .li > *:last-child {
    margin-bottom: 1.25em;
  }
  .ul .ul, .ul .ol, .ol .ul, .ol .ol {
    margin-top: 0.75em;
    margin-bottom: 0.75em;
  }
  .dl {
    margin-top: 1.25em;
    margin-bottom: 1.25em;
  }
  .dd {
    margin-top: 0.5em;
    padding-left: 1.625em;
  }
  .hr + * {
    margin-top: 0;
  }
  .h2 + * {
    margin-top: 0;
  }
  .h3 + * {
    margin-top: 0;
  }
  .h4 + * {
    margin-top: 0;
  }
  .thead .th:first-child {
    padding-left: 0;
  }
  .thead .th:last-child {
    padding-right: 0;
  }
  .tbody .td, .tfoot .td {
    padding-top: 0.5714286em;
    padding-right: 0.5714286em;
    padding-bottom: 0.5714286em;
    padding-left: 0.5714286em;
  }
  .tbody .td:first-child, .tfoot .td:first-child {
    padding-left: 0;
  }
  .tbody .td:last-child, .tfoot .td:last-child {
    padding-right: 0;
  }
  .figure {
    margin-top: 2em;
    margin-bottom: 2em;
  }
}"
`;

exports[`should not break with multiple selectors with pseudo elements using variants 1`] = `
"*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.dark\\:prose {
  &:is(.dark *) {
    .ol .li::before, .ul .li::before {
      color: red;
    }
  }
}"
`;

exports[`specificity is reduced with :where 1`] = `
"*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.prose {
  color: var(--tw-prose-body);
  max-width: 65ch;
  [class~="lead"] {
    color: var(--tw-prose-lead);
  }
  .strong {
    color: var(--tw-prose-bold);
    font-weight: 600;
  }
  .ol[type="A"] {
    list-style-type: upper-alpha;
  }
  .blockquote .p:first-of-type::before {
    content: open-quote;
  }
  .blockquote .p:last-of-type::after {
    content: close-quote;
  }
  .h4 .strong {
    font-weight: 700;
  }
  .figure > * {
    margin: 0;
  }
  .ol > .li::marker {
    font-weight: 400;
    color: var(--tw-prose-counters);
  }
   > .ul > .li .p {
    margin-top: 16px;
    margin-bottom: 16px;
  }
  .code::before {
    content: "&#96;";
  }
  .code::after {
    content: "&#96;";
  }
}"
`;

exports[`variants 1`] = `
"*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.hover\\:prose-lg {
  &:hover {
    @media (hover: hover) {
      color: green;
      .p {
        color: tomato;
      }
       > .ul > .li {
        color: blue;
      }
    }
  }
}
.sm\\:prose {
  @media (width >= 40rem) {
    color: red;
    .p {
      color: lime;
    }
     > .ul > .li {
      color: purple;
    }
  }
}
.lg\\:prose-lg {
  @media (width >= 64rem) {
    color: green;
    .p {
      color: tomato;
    }
     > .ul > .li {
      color: blue;
    }
  }
}"
`;
